@@ -1,7 +1,11 @@
 import Acquisition
 import zope.interface
 import zope.schema.interfaces
-from zope.app.component.hooks import getSite
+
+try:
+    from zope.site.hooks import getSite
+except ImportError:
+    from zope.app.component.hooks import getSite
 
 import z3c.form.interfaces
 import z3c.form.browser.textarea
